tests/compile_time_tests/tag_attribute_case_value_not_lower.stderr
error: `case` value must be either "upper" or "lower"
 --> tests/compile_time_tests/tag_attribute_case_value_not_lower.rs:5:18
  |
5 |     #[tag(case = "something")]
  |                  ^^^^^^^^^^^
